--- a/frontend/src/components/Register.css
+++ b/frontend/src/components/Register.css
@@ -40,23 +40,23 @@
 }
 
 /* Grid para los inputs */
-form {
+.formulario form {
   display: grid;
   grid-template-columns: 1fr 1fr; /* Dos columnas */
   grid-gap: 20px; /* Espacio entre los inputs */
   width: 100%;
 }
 
-/* Inputs que ocupan toda la fila */
-input[type="email"],
-input[type="submit"] {
+/* Inputs que ocupan toda la fila dentro de .box */
+.box input[type="email"],
+.box input[type="submit"] {
   grid-column: span 2;
 }
 
-/* Estilo de los inputs */
-input[type="text"],
-input[type="email"],
-input[type="password"] {
+/* Estilo de los inputs dentro de .box */
+.box input[type="text"],
+.box input[type="email"],
+.box input[type="password"] {
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -66,23 +66,9 @@ input[type="password"] {
   box-sizing: border-box;
   font-family: "Hammersmith One", sans-serif;
 }
-select {
-  font-family: "Hammersmith One", sans-serif;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  background-color: #fff;
-  color: #676767;
-  font-size: 16px;
-  box-sizing: border-box;
-}
-select:focus {
-    background-color: #fff; /* Color de fondo al seleccionar */
-  }
 
-/* Estilo del botón */
-input[type="submit"] {
+/* Estilo del botón dentro de .box */
+.box input[type="submit"] {
   padding: 12px;
   border: none;
   border-radius: 10px;
@@ -97,6 +83,23 @@ input[type="submit"] {
   font-style: normal;
 }
 
-input[type="submit"]:hover {
+.box input[type="submit"]:hover {
   background-color: #8983b7;
+}
+
+/* Estilo de select dentro de .box */
+.box select {
+  font-family: "Hammersmith One", sans-serif;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: #fff;
+  color: #676767;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+
+.box select:focus {
+  background-color: #fff; /* Color de fondo al seleccionar */
 }
