--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -76,7 +76,7 @@ margin: 30px 0;
   flex-wrap: wrap;
   font-size: 16px;
   font-family: "Hammersmith One", sans-serif;
-  margin:15px 0 15px;
+  margin:15px 0 15px
 }
 .remember-forgot a:hover{
   text-decoration: underline;
