--- a/frontend/src/components/Register.css
+++ b/frontend/src/components/Register.css
@@ -40,8 +40,7 @@
 }
 
 /* Grid para los inputs */
-.Formulario 
-.boxs{
+.Formulario .boxs {
   display: grid;
   grid-template-columns: 1fr 1fr; /* Dos columnas */
   grid-gap: 20px; /* Espacio entre los inputs */
@@ -67,9 +66,25 @@
   box-sizing: border-box;
   font-family: "Hammersmith One", sans-serif;
 }
+/* Estilo de select dentro de .box */
+.boxs select {
+  font-family: "Hammersmith One", sans-serif;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: #fff;
+  color: #676767;
+  font-size: 16px;
+  box-sizing: border-box;
+}
 
+.boxs select:focus {
+  background-color: #fff; /* Color de fondo al seleccionar */
+}
 /* Estilo del botón dentro de .box */
 .boxs input[type="submit"] {
+  margin-top: 10px;
   padding: 12px;
   border: none;
   border-radius: 10px;
@@ -88,19 +103,15 @@
   background-color: #8983b7;
 }
 
-/* Estilo de select dentro de .box */
-.boxs select {
-  font-family: "Hammersmith One", sans-serif;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  background-color: #fff;
-  color: #676767;
+.alredy {
+  text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
   font-size: 16px;
-  box-sizing: border-box;
+  font-family: "Hammersmith One", sans-serif;
+  margin: 20px 0 15px;
 }
-
-.boxs select:focus {
-  background-color: #fff; /* Color de fondo al seleccionar */
+.alredy label {
+  color: #fff;
+  margin-right: 10px;
 }
