--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -102,3 +102,56 @@ margin: 30px 0;
 background-color:#8983b7 ;
 }
 
+/* Clase para aplicar cuando hay un error */
+input.error {
+  border: 2px solid red;
+}
+
+/* Estilos para el mensaje de error justo debajo del input */
+.error-message {
+  color: red;
+  font-size: 12px;
+  text-align: left; /* Alinea el texto a la izquierda debajo del input */
+}
+
+.input-box {
+  position: relative;
+  width: 100%;
+  margin: 30px 0;
+}
+
+.input-box input {
+  width: 100%;
+  background-color: transparent;
+  border: 2px solid rgba(255, 253, 253, 0.2);
+  border-radius: 15px;
+  padding-left: 20px;
+  padding-right: 50px; /* Añadimos suficiente espacio a la derecha para el icono */
+  color: #fff;
+  font-family: "Hammersmith One", sans-serif;
+  font-size: 16px;
+}
+
+.toggle-password {
+  position: absolute;
+  top: 50%;
+  right: 15px; /* Alineamos el icono bien a la derecha */
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 18px;
+  color: #fff;
+  z-index: 10; /* Aseguramos que esté por encima del input */
+  background: none;
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 30px; /* Ajustamos el ancho del contenedor del icono */
+  height: 100%; /* Hacemos que el icono ocupe toda la altura del input */
+  padding: 0;
+}
+
+.toggle-password svg {
+  pointer-events: none; /* Asegura que solo el contenedor reciba clics, no el svg */
+}
