--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,9 +8,9 @@
   }
   
   body {
-    margin: 0;
-    padding: 0;
-    background-image: url('../src/components/images/fondo.png'); 
+   /*  margin: 0;
+    padding: 0; */
+    /* background-image: url('../src/components/images/fondo.png') ; */
     background-size: cover; 
     background-position: center;
     background-repeat: no-repeat; 
