feat: correcion de estilos en landing,login y register

--- a/frontend/src/components/Premiun/Premium.css
+++ b/frontend/src/components/Premiun/Premium.css
@@ -33,6 +33,8 @@
     font-family: 'Chau Philomene One', sans-serif;
     text-align: center;
     padding-top: 20px;
+    margin-bottom: 40px;
+    
 }
 .premium-container {
     display: flex;
