--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url("./image/fondo.png");
+  background-image: url('images/fondo.png');
   background-size: cover; /* Asegura que la imagen cubra toda la pantalla */
   background-position: center; /* Centra la imagen */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
