--- a/frontend/src/components/Premiun/PricingCard.css
+++ b/frontend/src/components/Premiun/PricingCard.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chau+Philomene+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 .pricing-card {
+    font-family: "Montserrat Alternates", sans-serif;
     background-color: #1c154f;
     color: white;
     text-align: center;
@@ -7,17 +10,20 @@
     border-radius: 10px;
     margin: 10px;
     width: 300px;
+    height: 260px;
     position: relative;
   }
   
-  .pricing-card h3 {
+  .pricing-card h3 {    
     font-size: 2.5rem;
     color: #ffffff;
     ;
   }
   
   .pricing-card h4 {
-    font-size: 1.5rem;
+    font-family: 'Chau Philomene One', sans-serif;
+    font-weight: 100;
+    font-size: 1.2rem;
     margin-top: 10px;
     color:#a6a6a6;
     padding-bottom: 20px;
