--- a/frontend/src/components/Landings/LandingYoung/LandingYoung.css
+++ b/frontend/src/components/Landings/LandingYoung/LandingYoung.css
@@ -1,7 +1,7 @@
 .PrincipalYoung {
   margin-bottom: 0px;
   padding: 0;
-  background-image: url('../images/Fondo-young.png');
+  background-image: url('../../images/Fondo-young.png');
   background-size: cover; 
   background-position: center;
   background-repeat: no-repeat; 
