--- a/frontend/src/components/header/HeaderAdult/Header.css
+++ b/frontend/src/components/header/HeaderAdult/Header.css
@@ -24,8 +24,30 @@
 }
 
 .listHeader a {
+  position: relative; /* Necesario para posicionar el pseudo-elemento */
   font-size: 1.1rem;
   text-align: center;
+}
+.headerLink::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: #ffc107; /* Color de la línea */
+  bottom: -5px; /* Ubicación debajo del texto */
+  left: 0;
+  transition: width 0.3s ease-in-out; /* Animación suave */
+}
+.headerLink:hover::after {
+  width: 100%; /* Expande la línea al 100% */
+}
+
+/* Estilo para los enlaces del header */
+.headerLink {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
 }
 
 .ctaList {
@@ -60,13 +82,6 @@
 }
 .login button:hover,
 .Register button:hover {
-  background-color: #9484bc;
-}
-
-/* Estilo para los enlaces del header */
-.headerLink {
-  margin: 0 15px;
-  text-decoration: none;
-  color: #ffffff;
-  font-size: 16px;
+  color: black;
+  background-color: #ffde59;
 }
