--- a/frontend/src/components/section/SectionAdult/Section.css
+++ b/frontend/src/components/section/SectionAdult/Section.css
@@ -33,7 +33,7 @@
     font-size: 1.3em;
     font-family: 'Chau Philomene One', sans-serif;
     text-align: center;
-    padding-top: 20px;
+     
 }
 
 .buttonSection {
@@ -44,7 +44,7 @@
 }
 
 .buttonSection button {
-    font-family: Hamme;
+    font-family: 'Hammersmith One', sans-serif;
     margin: 1rem;
     border-radius: 1.5rem;
     padding: 1rem;
