--- a/frontend/src/components/plans/Plans.css
+++ b/frontend/src/components/plans/Plans.css
@@ -1,27 +1,32 @@
 .plansContainer {
-    width: 95%;
-    margin: auto;
-    padding-top: 30px;
+    background-color: #0d161c;
+    width: 100%;
+    height: 90vh;
+    margin-top: 100px;
+    padding-top: 50px;
+    text-align: center;
 }
 
 .plansContainer .head {
     color: white;
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     font-family: 'Hammersmith One', sans-serif;
     padding-bottom: 20px;
 }
-
+.highlight {
+    color: #7564f4; /* Cambia a morado solo la palabra "educación" */
+  }
+.plansContainer p {
+    font-size: 1rem;
+    color: #989399;
+  }
 .containerBox {
     background-color: #1c154f;
+    width: 400px;
     border-radius: 1rem;
     padding: 10px;
     text-align: center;
-}
-
-.buttonContainer {
-    display: flex;
-    flex-direction: row;
 }
 
 .paraContainer {
@@ -29,40 +34,27 @@
 }
 
 .containerBox img {
-    height: 12rem;
-    width: 12rem;
+    height: 7rem;
+    width: 10rem;
     padding: 0.5rem;
 }
 
 .plansContainer h3 {
     color: white;
-    font-size: 1.3rem;
+    font-size: 2rem;
 }
 
 .plansBox p {
     color: gray;
-    width: 90%;
+    width: 80%;
     margin: auto;
-    height: 5.8rem;
-}
-
-.containerBox button {
-    color: #9484bc;
-    border: 1px solid #9484bc !important;
-    background-color: transparent;
-    padding: 0.3rem;
-    border-radius: 0.3rem;
-    cursor: pointer;
-}
-
-.IconComponent {
-    margin-right: 5px;
+    height: 5rem;
 }
 
 .plansBox {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 20px;
+    gap: 10px;
 }
 
 @media (max-width: 1200px) {
@@ -87,7 +79,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 20px 0;
+    margin: 40px 0;
 }
 
 /* Estilos para cada cuadro del plan */
@@ -104,22 +96,3 @@
     transform: scale(1.05); /* Hace que el cuadro se agrande un poco */
     box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2); /* Agrega sombra para un efecto más vistoso */
 }
-
-/* Estilos para los botones */
-.buttonContainer button {
-    background-color: #6200ea;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1rem;
-    border-radius: 8px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    cursor: pointer;
-}
-
-/* Cuando el mouse pasa sobre el botón */
-.buttonContainer button:hover {
-    background-color: #3700b3; /* Cambia de color */
-    transform: scale(1.1); /* Hace que el botón se agrande un poco */
-}
-
