bug : redireccion login and register

--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -158,15 +158,11 @@ input.error {
 
 /* Flecha en la esquina superior izquierda de la página */
 .back-arrow {
-  position: fixed; /* Fija la flecha en la esquina superior izquierda de la ventana */
-  top: 30px;     
-  left: 20px;     
-  right: 50px;
+  width: 10%;
   font-size: 24px;  
   color: #fff;      
   cursor: pointer;  /* Cambia el cursor a pointer al pasar sobre la flecha */
   transition: transform 0.2s ease-in-out;  /* Efecto de transición al hacer hover */
-  z-index: 1000;    /* Asegura que esté por encima de otros elementos */
 }
 
 .back-arrow:hover {
