Feat: edit desing login , Register and header

--- a/frontend/src/components/Landings/LandingAdult/LandingPage.css
+++ b/frontend/src/components/Landings/LandingAdult/LandingPage.css
@@ -1,11 +1,8 @@
-.landingContainer{
-   margin: 0;
-    padding: 0; 
-    background-image:url('../../images/Fondo-Adult.png') ;
-    background-size: cover; 
-    background-position: center;
-    background-repeat: no-repeat; 
-    height: 100vh;
+
+.landingContainer {
+  background-image: url("../../images/Fondo-Adult.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
-
-
