--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,90 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap');
-*{
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  box-sizing: border-box;
-}
-.content{
+
+.contentLogin{
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-image: url('images/fondo.png');
-  background-size: cover; /* Asegura que la imagen cubra toda la pantalla */
-  background-position: center; /* Centra la imagen */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
   height: 100vh; /* Asegura que el fondo cubra toda la ventana */
 }
 
 .login-box{
 background: transparent; /* Transparente opaco */
-width: 440px;
-height: 480px;
-padding: 20px;
-color: #fff;
+width: 420px;
+height: 460px;
+padding: 40px;
 backdrop-filter: blur(600px); /* Efecto de difuminado */
-border: 2px solid rgba(255, 253, 253, 0.2);
+border: 1px solid rgba(255, 253, 253, 0.2);
 box-shadow: 0 15px 25px rgba(0, 0, 0, 0.8); /* Sombra */
 border-radius: 20px;
 
 }
-.logo{
+.logo-Login{
   display: flex;
-  width: 140px;
-  margin-left: 120px;
-  height: auto;
+  width: 200px;
+  margin-left: 110px;
+  height: 100px;
   text-align: center;
   justify-content: center;
-  margin-top: 10px;
 }
 
 .login-box h1{
   font-family: "Hammersmith One", sans-serif;
-  font-weight: 400;
-  font-style: normal;
+  font-weight: 800;
   padding: 10px;
   text-align: center;
   font-size: 30px;
+  margin-top: 0;
 }
-.login-box .input-box{
+.login-box .input-box-Login{
 position: relative;
 width: 100%;
 height: 40px;
-margin: 30px 0;
+margin: 40px 0;
+border-radius:10px ;
 }
-.input-box input{
+.input-box-Login input{
   width: 100%;
   height: 100%;
-  background-color: transparent;
-  border: 2px solid rgba(255, 253, 253, 0.2);
   border-radius: 15px;
-  padding-left: 20px;
-  color: #fff;
+  padding-left: 10px;
   font-family: "Hammersmith One", sans-serif;
+  border: 1px solid rgba(0, 0, 0, 0.5);
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
 }
-.input-box input::placeholder{
-  color:#fff
+.input-box-Login input::placeholder{
+  color:gray;
 }
-.remember-forgot{
+.remember-forgot-Login{
   display:flex;
   text-align: center;
   justify-content: center;
   flex-wrap: wrap;
   font-size: 16px;
   font-family: "Hammersmith One", sans-serif;
-  margin:15px 0 15px
+  margin:20px 0 30px
 }
-.remember-forgot a:hover{
-  text-decoration: underline;
-}
-.btn-submit{
-  width: 100%;
+
+.btn-submit-Login{
+  width: 104%;
   height: 45px;
-  background-color: #49408a;
+  background-color: #000000;
   border: none;
   outline: none;
   border-radius: 20px;
@@ -98,8 +84,8 @@ margin: 30px 0;
   font-style: normal;
 
 }
-.btn-submit:hover{
-background-color:#8983b7 ;
+.btn-submit-Login:hover{
+background-color:#6a6a6e ;
 }
 
 /* Clase para aplicar cuando hay un error */
@@ -114,32 +100,14 @@ input.error {
   text-align: left; /* Alinea el texto a la izquierda debajo del input */
 }
 
-.input-box {
-  position: relative;
-  width: 100%;
-  margin: 30px 0;
-}
-
-.input-box input {
-  width: 100%;
-  background-color: transparent;
-  border: 2px solid rgba(255, 253, 253, 0.2);
-  border-radius: 15px;
-  padding-left: 20px;
-  padding-right: 50px; /* Añadimos suficiente espacio a la derecha para el icono */
-  color: #fff;
-  font-family: "Hammersmith One", sans-serif;
-  font-size: 16px;
-}
-
-.toggle-password {
+.toggle-password-Login {
   position: absolute;
-  top: 50%;
-  right: 15px; /* Alineamos el icono bien a la derecha */
+  top: 60%;
+  right: 0px; /* Alineamos el icono bien a la derecha */
   transform: translateY(-50%);
   cursor: pointer;
   font-size: 18px;
-  color: #fff;
+  color: #000000;
   z-index: 10; /* Aseguramos que esté por encima del input */
   background: none;
   border: none;
@@ -152,19 +120,22 @@ input.error {
   padding: 0;
 }
 
-.toggle-password svg {
+.toggle-password-Login svg {
   pointer-events: none; /* Asegura que solo el contenedor reciba clics, no el svg */
 }
 
 /* Flecha en la esquina superior izquierda de la página */
-.back-arrow {
+.back-arrow-Login {
+  position: absolute;
+  top: 20px;
+  left: -50px;
   width: 10%;
   font-size: 24px;  
-  color: #fff;      
+  color:black;     
   cursor: pointer;  /* Cambia el cursor a pointer al pasar sobre la flecha */
   transition: transform 0.2s ease-in-out;  /* Efecto de transición al hacer hover */
 }
 
-.back-arrow:hover {
+.back-arrow-Login:hover {
   transform: scale(1.2); /* Efecto de agrandamiento al pasar el cursor */
 }
