--- a/frontend/src/components/header/headerKids/HeaderKids.css
+++ b/frontend/src/components/header/headerKids/HeaderKids.css
@@ -2,9 +2,9 @@
   display: grid;
   grid-template-columns: 1fr 2fr 1fr; /* Tres columnas con proporciones */
   align-items: center;
-  padding: 10px 20px;
+  padding: 20px 80px;
   font-family: 'Hammersmith One', sans-serif;
-  width: 100%;
+  width: 90%;
   background-color: #ffffff;
 }
 
@@ -20,14 +20,15 @@
 
 .listHeaderKids {
   font-family: 'Monserrat',sans-serif;
-  display: flex;
+  margin-left: 60px;
+  width: 500px;
   justify-content: center;
   align-items: center;
 }
 .listHeaderKids a {
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: 200;
-  margin: 0;
+  margin: 0 20px;
   text-align: center;
   color: black;
   position: relative;
@@ -58,7 +59,7 @@
 }
 
 
-.headerLink {
+.headerLink-Kids {
   margin: 0 5px;
   text-decoration: none;
   color: #ffffff;
@@ -66,7 +67,6 @@
 }
 
 .ctaListKids {
-  display: flex;
   justify-content: flex-end;
   padding-left: 2rem;
   padding: 0.5rem;
@@ -74,7 +74,7 @@
 
 /* Estilo para el botón */
 .ctaListKids button {
-  color: #ffffff;
+  color: #000000;
   border: none;
   padding: 5px 10px;
   cursor: pointer;
@@ -84,16 +84,18 @@
 .ctaListKids .loginKids .loginJugo {
   font-family: 'Monserrat',sans-serif;
   color: black;
+  width: 50%;
   background-color: white;
   font-weight: 600;
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 .ctaListKids .loginKids button {
+  font-family: 'Monserrat',sans-serif;
   color: black;
   background-color: #f9de70;
-  font-weight: 800;
-  font-size: 0.7rem;
+  font-weight: 600;
+  font-size: 1rem;
   width: 50%;
 }
 
