--- a/frontend/src/components/section/SectionAdult/Section.css
+++ b/frontend/src/components/section/SectionAdult/Section.css
@@ -38,7 +38,7 @@
 
 .buttonSection {
     display: flex;
-    width: 40%;
+    width: 30%;
     margin: auto;
     padding-top: 20px;
 }
@@ -48,7 +48,9 @@
     margin: 1rem;
     border-radius: 1.5rem;
     padding: 1rem;
-    font-size: 1.2rem;
+    font-weight: 600;
+    font-size: 1.4rem;
+    width: 100%;
     border: none;
     cursor: pointer;
 }
@@ -56,4 +58,7 @@
 .btnTwo {
     color: black;
     background-color: #ffde59;
+}
+.btnTwo:hover{
+    background-color: #ffcc00;
 }
