--- a/frontend/src/components/header/headerKids/HeaderKids.css
+++ b/frontend/src/components/header/headerKids/HeaderKids.css
@@ -1,38 +1,39 @@
 .headerStructureKids {
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr; /* Tres columnas con proporciones */
+  display: flex;
   align-items: center;
-  padding: 20px 80px;
-  font-family: 'Hammersmith One', sans-serif;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px 20px;
+  margin-left: 100px;
+  font-family: "Hammersmith One", sans-serif;
   width: 90%;
   background-color: #ffffff;
 }
 
 .logo2Kids {
   display: flex;
-  justify-content: flex-start;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo2Kids img {
-  width: 12rem;
-  margin-left: 10px;
+  width: 15rem;
+  height: 5rem;
 }
 
 .listHeaderKids {
-  font-family: 'Monserrat',sans-serif;
-  margin-left: 60px;
-  width: 500px;
+  flex-grow: 2;
+  padding: 0 50PX;
+  font-family: "Montserrat Alternates", sans-serif;
+  display: flex;
   justify-content: center;
-  align-items: center;
 }
 .listHeaderKids a {
-  font-size: 1rem;
-  font-weight: 200;
-  margin: 0 20px;
-  text-align: center;
   color: black;
-  position: relative;
-  transition: color 0.3s ease;
+  font-size: 1.1rem;
+  text-align: center;
+  position: relative; /* Necesario para posicionar el pseudo-elemento */
+  margin: 0 45px;
 }
 
 .listHeaderKids a::after {
@@ -66,37 +67,44 @@
   font-size: 16px;
 }
 
-.ctaListKids {
+.ctaList-Kids {
+  display: flex;
+  align-items: center;
   justify-content: flex-end;
-  padding-left: 2rem;
-  padding: 0.5rem;
+  margin-left: 20px;
+  gap: 20px; /* Añade espacio uniforme entre elementos */
+}
+.ctaList-Kids > div {
+  margin-left: 20px;
 }
 
-/* Estilo para el botón */
-.ctaListKids button {
-  color: #000000;
+.login-Kids{
+  padding: 0 10px;
+  border-left: 2px solid rgba(0, 0, 0, 0.5); /* Línea vertical con transparencia */
+  margin-right: 10px;
+}
+
+
+/* Botón de login y register */
+.login-Kids button,
+.Register-Kids button {
+  font-family: "Hammersmith One", sans-serif;
+  padding: 10px;
+  margin-left:40px ;
+  background-color: transparent;
+  color: rgb(0, 0, 0);
   border: none;
-  padding: 5px 10px;
-  cursor: pointer;
   border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 120%;
 }
-
-.ctaListKids .loginKids .loginJugo {
-  font-family: 'Monserrat',sans-serif;
-  color: black;
-  width: 50%;
-  background-color: white;
-  font-weight: 600;
-  font-size: 1rem;
-}
-
-.ctaListKids .loginKids button {
-  font-family: 'Monserrat',sans-serif;
-  color: black;
+/* Estado hover */
+.login-Kids button:hover,
+.Register-Kids button:hover {
   background-color: #f9de70;
-  font-weight: 600;
-  font-size: 1rem;
-  width: 50%;
+  color: black; /* Cambia el color del texto */
+  transition: background-color 0.3s ease; /* Animación suave para el cambio */
 }
 
 
